fix horizontal overflow and timeline colors

--- a/web_simulation/src/App.css
+++ b/web_simulation/src/App.css
@@ -10,3 +10,7 @@
 .timelineDiv>div>div>ul>li {
   background-image: unset !important;
 }
+
+body {
+  overflow-x: hidden;
+}
